modified infowindow and marker

--- a/geoloc/trylang.html
+++ b/geoloc/trylang.html
@@ -111,13 +111,19 @@
 
 <body>
     <div id="map"></div>
+
     <input id="lat" placeholder="latitude" />
     <input id="lng" placeholder="longhitude" />
     <!-- just put a input type -->
     <input type="text" id="str1" placeholder="string 1" />
     <input type="text" id="str2" placeholder="string 2" />
 
+    <?php
+    include('conenct.php');
+
+    mysqli_query("");
     <button id="myBtn">Mark</button>
+    ?>
 </body>
 
 </html>
